# boilerplate

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT_PHASES.md  Enterprise_Boilerplate_Specifikacija.md  Makefile  README.md  changelog.md  docker-compose.dev.yml
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_rbac_tables.py  002_add_audit_logs.py  003_create_documents_table.py  4c476b041802_create_users_table.py  c1a68599dd4d_initial_migration.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py  test_redis.py
backend/app/api/v1/: __init__.py  auth.py  documents.py  oidc.py  permissions.py  roles.py  search.py  users.py
backend/app/core/: __init__.py  cookies.py  database.py  init_db.py  rate_limit.py  redis.py  seed_rbac.py
backend/app/models/: __init__.py  audit_log.py  base.py  document.py  permission.py  role.py  role_permission.py  user.py  user_role.py
backend/app/schemas/: __init__.py  auth.py  document.py  permission.py  role.py  search.py  user.py  user_role.py
backend/app/services/: __init__.py  audit.py  document.py  email.py  jwt.py  oidc.py  password_reset.py  rbac.py  search.py  security.py
backend/scripts/: test_db_connection.py  test_redis_connection.py
backend/tests/: conftest.py  test_auth_api.py  test_document_api.py  test_document_service.py  test_jwt.py  test_rbac_api.py  test_rbac_service.py  test_search_api.py  test_search_service.py  test_security.py
docker/pgadmin/: servers.json
docker/postgres/: init.sql
frontend/: package.json  pnpm-lock.yaml
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: CanAccess.tsx  ProtectedRoute.tsx  RequireRole.tsx  SearchBar.tsx
frontend/src/components/ui/: badge.tsx  checkbox.tsx  dialog.tsx  index.ts  select.tsx
frontend/src/hooks/: index.ts  useAuth.ts  useDocuments.ts  usePermissions.ts
frontend/src/routes/: __root.tsx  index.tsx  search.tsx
frontend/src/routes/admin/roles/: $roleId.tsx  index.tsx
frontend/src/routes/admin/users/: index.tsx
frontend/src/routes/auth/: forgot-password.tsx  login.tsx  register.tsx  reset-password.tsx
frontend/src/routes/dashboard/: index.tsx
frontend/src/routes/documents/: $documentId.tsx  index.tsx
frontend/src/stores/: index.ts
